force-app/main/default/objects/RD_SeatList__c/RD_SeatList__c.object-meta.xml
<CustomObject>
    <label>RD SeatList</label>
    <nameField>
        <label>RD SeatList</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD SeatList</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>