force-app/main/default/objects/RD_SeatList__c/fields/AssySeat__c.field-meta.xml
<CustomField>
    <fullName>AssySeat__c</fullName>
    <label>AssySeat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>