force-app/main/default/objects/RD_SeatList__c/fields/SeatGroup__c.field-meta.xml
<CustomField>
    <fullName>SeatGroup__c</fullName>
    <label>SeatGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>