force-app/main/default/objects/RD_SeatList__c/fields/SizeLL__c.field-meta.xml
<CustomField>
    <fullName>SizeLL__c</fullName>
    <label>SizeLL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>