force-app/main/default/objects/RD_SeatList__c/fields/SizeUL__c.field-meta.xml
<CustomField>
    <fullName>SizeUL__c</fullName>
    <label>SizeUL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>