force-app/main/default/objects/RD_SeatList__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Desc__c</columns>
    <columns>PartSeat__c</columns>
    <columns>PartSeat_Proposal__c</columns>
    <columns>SeatGroup__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>